# python-boilerplate

./: .flake8  .isort.cfg  Makefile  README.md  mypy.ini  setup.py
src/: Makefile  pyproject.toml
